--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:background="@drawable/dang_ky_background"
     android:layout_height="match_parent"
-    tools:context="LoginActivity">
+    tools:context=".activity.LoginActivity">
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
+        android:layout_marginTop="50dp"
+        android:src="@drawable/logo" />
 
     <TextView
         android:textSize="20sp"
