--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/dang_ky_background"
     android:layout_height="match_parent"
-    tools:context=".activity.RegisterActivity">
+    tools:context=".activity.ChangePasswordActivity">
 
     <ImageView
         android:id="@+id/logo"
@@ -16,24 +16,24 @@
         android:src="@drawable/logo" />
 
     <TextView
-        android:textSize="20sp"
-        android:id="@+id/txt_mail"
-        android:layout_marginStart="30dp"
-        android:text="@string/email"
-        android:layout_below="@id/logo"
+        android:id="@+id/txt_old_pass"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo"
+        android:layout_marginStart="30dp"
+        android:text="@string/old_pass"
+        android:textSize="20sp" />
     <FrameLayout
-        android:id="@+id/frame_mail"
+        android:id="@+id/frame_old_pass"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/border"
-        android:layout_below="@id/txt_mail"
+        android:layout_below="@id/txt_old_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
         <EditText
-            android:hint="@string/enter_mail"
-            android:id="@+id/edt_mail"
+            android:hint="@string/enter_old_pass"
+            android:id="@+id/edt_old_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -50,17 +50,17 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="start|center_vertical"
-            android:background="@drawable/ic_mail_black_24" />
+            android:background="@drawable/ic_lock_24" />
     </FrameLayout>
 
     <TextView
-        android:textSize="20sp"
         android:id="@+id/txt_pass1"
-        android:layout_marginStart="30dp"
-        android:text="@string/password"
-        android:layout_below="@id/frame_mail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/frame_old_pass"
+        android:layout_marginStart="30dp"
+        android:text="@string/new_password"
+        android:textSize="20sp" />
     <FrameLayout
         android:id="@+id/frame_pass"
         android:layout_marginStart="20dp"
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
         <EditText
-            android:hint="@string/enter_pass"
+            android:hint="@string/enter_new_pass"
             android:id="@+id/edt_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -128,15 +128,15 @@
     </FrameLayout>
 
     <Button
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_change_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/frame_pass2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/border_button"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
-        android:textColor="@android:color/white"
-        android:background="@drawable/border_button"
-        android:layout_marginTop="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/frame_pass2"
-        android:text="@string/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:text="@string/change_pass"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
