--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,18 +29,18 @@
     <TextView
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        android:id="@+id/txt_mail"
+        android:id="@+id/txt_old_pass"
         android:layout_marginStart="30dp"
         android:text="@string/email"
         android:layout_below="@id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <FrameLayout
-        android:id="@+id/frame_mail"
+        android:id="@+id/frame_old_pass"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/border"
-        android:layout_below="@id/txt_mail"
+        android:layout_below="@id/txt_old_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
         <EditText
@@ -70,7 +70,7 @@
         android:id="@+id/txt_pass1"
         android:layout_marginStart="30dp"
         android:text="@string/password"
-        android:layout_below="@id/frame_mail"
+        android:layout_below="@id/frame_old_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <FrameLayout
