--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+<RelativeLayout
     android:layout_width="90dp"
     android:layout_marginEnd="2dp"
-    android:background="@drawable/background_cate"
+    android:id="@+id/cate_item"
     android:minHeight="90dp"
     android:layout_height="wrap_content">
-    <ImageView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/img_category"
-        android:layout_width="70dp"
-        android:layout_height="70dp"/>
-    <TextView
-        android:id="@+id/txt_category"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/img_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        <ImageView
+            android:layout_centerHorizontal="true"
+            android:id="@+id/img_category"
+            android:layout_width="70dp"
+            android:layout_height="70dp"/>
+        <TextView
+            android:id="@+id/txt_category"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/img_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 </RelativeLayout>
+</androidx.cardview.widget.CardView>
