--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -27,27 +27,24 @@
             android:src="@drawable/close"/>
     </FrameLayout>
 
-    <RelativeLayout
-        android:id="@+id/Body"
-        android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:layout_below="@+id/header_title">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listProduct"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp" />
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/footer"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/header_title"
+        android:layout_above="@id/footer"
+        android:id="@+id/listProduct"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/Body">
+        android:layout_marginTop="10dp" />
+
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
+            android:layout_above="@id/btnOrder"
             android:id="@+id/txt_TotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,6 +54,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:layout_above="@id/btnOrder"
             android:id="@+id/txt_NumberTotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
