--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:id="@+id/img_cart"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_baseline_shopping_cart_24"
+            android:tint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
