--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -4,17 +4,21 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 <RelativeLayout
-    android:layout_width="90dp"
+    android:layout_width="@dimen/dimen_80dp"
     android:layout_marginEnd="2dp"
     android:id="@+id/cate_item"
-    android:minHeight="90dp"
+    android:minHeight="@dimen/dimen_80dp"
     android:layout_height="wrap_content">
         <ImageView
+            android:layout_marginTop="5dp"
             android:layout_centerHorizontal="true"
             android:id="@+id/img_category"
-            android:layout_width="70dp"
-            android:layout_height="70dp"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
         <TextView
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:singleLine="true"
             android:id="@+id/txt_category"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/img_category"
