--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:paddingStart="10dp"
             android:textSize="16sp"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/img_less_cate"
@@ -32,17 +33,20 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_toStartOf="@id/img_more_cate"
             android:id="@+id/recycler_select_cate"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/img_more_cate"
+            android:paddingTop="5dp" />
+
         <ImageView
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_baseline_expand_more_24"
+            android:minHeight="@dimen/dimen_80dp"
             android:id="@+id/img_more_cate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_baseline_expand_more_24" />
     </RelativeLayout>
 
 
