--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -38,26 +38,26 @@
         android:layout_marginTop="10dp" />
 
     <RelativeLayout
-        android:layout_alignParentBottom="true"
         android:id="@+id/footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
         <TextView
-            android:layout_above="@id/btnOrder"
             android:id="@+id/txt_TotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@id/btnOrder"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp"
             android:text="Giá trị đơn hàng"
             android:textSize="20dp" />
 
         <TextView
-            android:layout_above="@id/btnOrder"
             android:id="@+id/txt_NumberTotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@id/btnOrder"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
             android:text="10.000.000Đ"
