BinhBH: Them danh sach giam gia, moi cho home. Sua 1 so giao dien.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,6 +41,7 @@
     </style>
 
     <style name="ToolbarColored" parent="AppTheme">
+        <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
     </style>
 </resources>
