--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -16,6 +16,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"/>
         <TextView
+            android:textColor="@color/black"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
             android:singleLine="true"
