--- a/app/src/main/res/layout/items_layout.xml
+++ b/app/src/main/res/layout/items_layout.xml
@@ -7,32 +7,56 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     app:cardCornerRadius="10dp"
-    android:layout_height="wrap_content">
+    android:layout_height="230dp">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/image_item"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_centerHorizontal="true" />
+        <FrameLayout
+            android:id="@+id/frame_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/image_item"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_gravity="end"
+                android:id="@+id/text_percent_discount"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="5dp"
+                android:background="@drawable/border_discount"
+                android:gravity="center"
+                android:text="-30%"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+        </FrameLayout>
+
 
         <TextView
+            android:textColor="@color/black"
+            android:layout_above="@id/txt_cost_item"
             android:textSize="16sp"
             android:id="@+id/txt_name_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/image_item"
+            android:layout_below="@id/frame_image"
             android:ellipsize="end"
             android:maxLines="2"
             android:padding="10dp" />
 
         <TextView
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
             android:id="@+id/txt_cost_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txt_name_item"
             android:layout_alignParentEnd="true"
             android:paddingEnd="10dp"
             android:textColor="@color/red"
