BinhBH: Sua Giao dien Danh muc, ghep api danh muc

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -134,7 +134,7 @@
         android:layout_below="@id/frame_pass2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:background="@drawable/border_button"
+        android:background="@drawable/border_button_blue"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:text="@string/change_pass"
