--- a/app/src/main/res/drawable/border_item_filter.xml
+++ b/app/src/main/res/drawable/border_item_filter.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@android:color/white" />
-    <corners android:radius="10dp"/>
+    <solid android:color="@color/gray_item_filter" />
+    <corners android:radius="20dp"/>
 </shape>
