--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -71,7 +71,7 @@
         android:layout_below="@id/frame_mail"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:background="@drawable/border_button"
+        android:background="@drawable/border_button_blue"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:text="@string/authentic"
