--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,7 @@
 
 
         <RelativeLayout
+            android:visibility="gone"
             android:id="@+id/layout_giam_gia"
             android:layout_below="@id/card_slider"
             android:layout_width="match_parent"
@@ -46,7 +47,7 @@
                 android:id="@+id/title_giam_gia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/text_more"
+                android:layout_toStartOf="@id/text_more_discount"
                 android:maxLines="2"
                 android:paddingStart="10dp"
                 android:text="Mặt hàng đang khuyến mại"
@@ -59,7 +60,7 @@
                 android:textStyle="bold"
                 android:paddingEnd="10dp"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/text_more"
+                android:id="@+id/text_more_discount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
@@ -72,6 +73,8 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/layout_new"
             android:layout_below="@id/layout_giam_gia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -79,7 +82,7 @@
                 android:id="@+id/title_new"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/text_more2"
+                android:layout_toStartOf="@id/text_more_new"
                 android:maxLines="2"
                 android:paddingStart="10dp"
                 android:text="Mặt hàng mới"
@@ -92,7 +95,7 @@
                 android:textStyle="bold"
                 android:paddingEnd="10dp"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/text_more2"
+                android:id="@+id/text_more_new"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
